@@ -70,6 +70,8 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - New methods begin() and end().
     - file:
       - New class 'RequiredFile'.
+    - system/state:
+      - New method 'getArchitecture'.
   * doc:
     - tutorial:
       - In the man page version, all command examples are now marked bold.
